test/parser/trait_declaration/extends_in_methods_error.exp
Error: Unexpected token `extends`, expected start of method
test/parser/trait_declaration/extends_in_methods_error.myte:4:2-9
 4 |   extends Bar
   |   ^^^^^^^