test/parser/trait_declaration/extends_in_methods_error.myte
module test

methods Foo {
  extends Bar
}